--- a/index.html
+++ b/index.html
@@ -27,30 +27,31 @@
 
   <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
   <script>
-    let tg = window.Telegram.Webapp;
-    let buy = document.getElementById("buy")
-    let order = document.getElementById("order")
+    let tg = window.Telegram.WebApp;
+    let buy = document.getElementById("buy");
+    let order = document.getElementById("order");
     tg.expand();
-
+  
     buy.addEventListener("click", () => {
       document.getElementById("main").style.display = "none";
       document.getElementById("form").style.display = "block";
-    })
-      
+    });
+  
     order.addEventListener("click", () => {
       let name = document.getElementById("user_name").value;
       let email = document.getElementById("user_email").value;
       let phone = document.getElementById("user_phone").value;
-      })
-
+  
       let data = {
         name: name,
         email: email,
         phone: phone,
-      }
+      };
+  
+      tg.sendData(JSON.stringify(data)); // <-- чтобы данные ушли в бота
       tg.close();
-
-  </script>
+    });
+  </script>  
 </body>
 
 </html>
